--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,7 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
-            "stopOnEntry": false,
+            "args": ["--extensionDevelopmentPath=${workspaceRoot}", "/Users/andrew.eisenberg/Eclipse/git-repos/github/codeql-threat-model-demo"],
             "sourceMaps": true,
             "outFiles": [ "${workspaceRoot}/out/**/*.js" ],
             "preLaunchTask": "npm: start"
@@ -16,9 +15,8 @@
             "name": "Launch Mocha",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",          
-            "args": ["--color", "--inspect-brk=9229"], // "${file}"
-            "port": 9229,
+            "program": "${workspaceRoot}/node_modules/.bin/mocha",
+            "args": ["--color", "--inspect-brk=9229", "${file}"], //
             "skipFiles": [
                 "<node_internals>/**/*.js",
                 "${workspaceFolder}/node_modules/**/*.js",
